--- a/ts/templates/group_sp.tmpl
+++ b/ts/templates/group_sp.tmpl
@@ -2,6 +2,7 @@ env HOME={{.Home}}
 env TMPDIR={{.TmpDir}}
 env sb_dir=$HOME/sandboxes/group_sp_msb_{{.DbPathVer}}
 
+[!exec:dbdeployer] skip 'dbdeployer executable not found'
 ! exists $sb_dir
 
 exec dbdeployer deploy replication --topology=group --concurrent --single-primary {{.DbVersion}}
