--- a/ts/templates/single.tmpl
+++ b/ts/templates/single.tmpl
@@ -2,6 +2,8 @@ env HOME={{.Home}}
 env TMPDIR={{.TmpDir}}
 env sb_dir=$HOME/sandboxes/msb_{{.DbPathVer}}
 
+[!exec:dbdeployer] skip 'dbdeployer executable not found'
+
 ! exists $sb_dir
 
 exec dbdeployer deploy single {{.DbVersion}}
