--- a/ts/templates/group_sp.tmpl
+++ b/ts/templates/group_sp.tmpl
@@ -35,6 +35,8 @@ check_file $sb_dir/node3 replicate_from send_kill sysbench use
 check_file $sb_dir/node3 metadata restart show_binlog sysbench_ready wipe_and_restart
 check_file $sb_dir/node3 connection.conf grants.mysql my sb_include show_log test_sb
 
+check_ports $sb_dir 6
+
 exec $HOME/sandboxes/group_sp_msb_{{.DbPathVer}}/test_replication
 stdout '# fail: 0'
 ! stderr .
