--- a/ts/templates/replication.tmpl
+++ b/ts/templates/replication.tmpl
@@ -30,6 +30,8 @@ check_file $sb_dir/node1 replicate_from send_kill sysbench use
 check_file $sb_dir/node1 metadata restart show_binlog sysbench_ready wipe_and_restart
 check_file $sb_dir/node1 connection.conf grants.mysql my sb_include show_log test_sb
 
+check_ports $sb_dir 3
+
 exec $HOME/sandboxes/rsandbox_{{.DbPathVer}}/test_replication
 stdout '# failed:     0'
 ! stderr .
