--- a/ts/templates/single.tmpl
+++ b/ts/templates/single.tmpl
@@ -18,6 +18,7 @@ check_file $sb_dir replicate_from send_kill sysbench use
 check_file $sb_dir metadata restart show_binlog sysbench_ready wipe_and_restart
 check_file $sb_dir connection.conf grants.mysql my sb_include show_log test_sb
 
+check_ports $sb_dir 1
 
 exec $sb_dir/test_sb
 stdout '# fail  :     0'
