--- a/ts_test/templates/feature/single.tmpl
+++ b/ts_test/templates/feature/single.tmpl
@@ -1,13 +1,12 @@
 env HOME={{.Home}}
 env TMPDIR={{.TmpDir}}
+env db_version={{.DbVersion}}
 env sb_dir=$HOME/sandboxes/msb_{{.DbPathVer}}
-
-# [!exec:dbdeployer] skip 'dbdeployer executable not found'
 
 ! exists $sb_dir
 
-# $db_version exists because it was set during test deployment
-# (Setup func within testscript.Params in testscript.Run())
+# deployment
+
 exec dbdeployer deploy single $db_version
 stdout 'Database installed in .*/sandboxes/msb_{{.DbPathVer}}'
 stdout 'sandbox server started'
@@ -15,6 +14,8 @@ stdout 'sandbox server started'
 exists $sb_dir
 
 cleanup_at_end $sb_dir
+
+# check files and ports
 
 check_file $sb_dir start stop status clear
 check_file $sb_dir add_option connection.json init_db my.sandbox.cnf
@@ -34,6 +35,22 @@ stdout '# fail  :     0'
 
 ! find_errors $sb_dir
 
+# test dbdeployer sandboxes
+
+exec dbdeployer sandboxes
+stdout 'msb_{{.DbPathVer}}.*single'
+! stderr .
+
+# Test restart sandbox
+exec $sb_dir/restart --max-connections=88
+stdout 'stop .*/msb_{{.DbPathVer}}'
+stdout 'sandbox server started'
+! stderr .
+
+run_sql_in_sandbox $sb_dir 'select @@max_connections' 88
+! find_errors $sb_dir
+
+# sandbox cleanup
 exec dbdeployer delete msb_{{.DbPathVer}}
 stdout 'sandboxes/msb_{{.DbPathVer}}'
 ! stderr .
