--- a/ts_test/templates/multi-source/fan-in.tmpl
+++ b/ts_test/templates/multi-source/fan-in.tmpl
@@ -1,33 +1,33 @@
 env HOME={{.Home}}
 env TMPDIR={{.TmpDir}}
-env sb_dir=$HOME/sandboxes/group_sp_msb_{{.DbPathVer}}
-env db_version={{.DbVersion}}
+env sb_dir=$HOME/sandboxes/fan_in_msb_{{.DbPathVer}}
 
-[!minimum_version_for_group:$db_version:{{.DbFlavor}}] skip 'minimum version for group replication not met'
-# [!exec:dbdeployer] skip 'dbdeployer executable not found'
+[!minimum_version_for_multi_source:{{.DbVersion}}:{{.DbFlavor}}] skip 'minimum version for multi-source replication not met'
 ! exists $sb_dir
 
-exec dbdeployer deploy replication --topology=group --concurrent --single-primary $db_version
+exec dbdeployer deploy replication --topology=fan-in --concurrent {{.DbVersion}}
 exists $sb_dir
 exists $sb_dir/node3
 cleanup_at_end $sb_dir
-
-stdout 'Group Replication directory installed in .*/sandboxes/group_sp_msb_{{.DbPathVer}}'
-stdout 'initialize_nodes'
-stdout -count=5 '# Node 1'
-stdout -count=3 '# Node 3'
-stdout -count=3 '# Node 3'
+stdout 'fan-in directory installed in .*/sandboxes/fan_in_msb_{{.DbPathVer}}'
+stdout 'initialize_ms_nodes'
+stdout '# server: 1'
+stdout '# server: 2'
+stdout '# server: 3'
 ! stderr .
 
-sleep 2
-exec $sb_dir/check_nodes
-stdout -count=9 'ONLINE'
-[version_is_at_least:$db_version:8.0.0] stdout -count=3 'PRIMARY'
-[version_is_at_least:$db_version:8.0.0] stdout -count=6 'SECONDARY'
+exists $sb_dir
+[!exists_within_seconds:$sb_dir/node3/data/msandbox.err:10] stop 'the database log for node 3 was not found within 10 seconds'
+
+exec $sb_dir/check_ms_nodes
+stdout '# Master 1'
+stdout '# Master 2'
+stdout -count=2 'Slave_IO_Running: Yes'
+stdout -count=2 'Slave_SQL_Running: Yes'
 ! stderr .
 
-check_file $sb_dir check_nodes exec_all_slaves metadata_all start_all sysbench_ready use_all_masters
-check_file $sb_dir clear_all initialize_nodes n1 status_all test_replication use_all_slaves
+check_file $sb_dir check_ms_nodes exec_all_slaves metadata_all start_all sysbench_ready use_all_masters
+check_file $sb_dir clear_all initialize_ms_nodes n1 status_all test_replication use_all_slaves
 check_file $sb_dir exec_all n2 replicate_from sbdescription.json stop_all test_sb_all wipe_and_restart_all
 check_file $sb_dir exec_all_masters n3 restart_all send_kill_all sysbench use_all
 
@@ -45,11 +45,11 @@ check_file $sb_dir/node3 replicate_from send_kill sysbench use
 check_file $sb_dir/node3 metadata restart show_binlog sysbench_ready wipe_and_restart
 check_file $sb_dir/node3 connection.conf grants.mysql my sb_include show_log test_sb
 
-env required_ports=6
-[version_is_at_least:$db_version:8.0.0] env required_ports=9
+env required_ports=3
+[version_is_at_least:$db_version:8.0.0] env required_ports=6
 check_ports $sb_dir $required_ports
 
-exec $HOME/sandboxes/group_sp_msb_{{.DbPathVer}}/test_replication
+exec $HOME/sandboxes/fan_in_msb_{{.DbPathVer}}/test_replication
 stdout '# fail: 0'
 ! stderr .
 
@@ -57,6 +57,6 @@ stdout '# fail: 0'
 ! find_errors $sb_dir/node2
 ! find_errors $sb_dir/node3
 
-exec dbdeployer delete group_sp_msb_{{.DbPathVer}}
-stdout 'sandboxes/group_sp_msb_{{.DbPathVer}}'
+exec dbdeployer delete fan_in_msb_{{.DbPathVer}}
+stdout 'sandboxes/fan_in_msb_{{.DbPathVer}}'
 ! stderr .
