--- a/ts_test/templates/replication/replication-gtid.tmpl
+++ b/ts_test/templates/replication/replication-gtid.tmpl
@@ -1,3 +1,4 @@
+[!unix] stop 'this procedure can only work on Unix systems'
 env HOME={{.Home}}
 env TMPDIR={{.TmpDir}}
 env sb_dir=$HOME/sandboxes/rsandbox_{{.DbPathVer}}_gtid
