Replace 'stop' with 'skip' for [!unix] condition

--- a/ts/templates/feature/dd-expose-tables.tmpl
+++ b/ts/templates/feature/dd-expose-tables.tmpl
@@ -1,4 +1,4 @@
-[!unix] stop 'this procedure can only work on Unix systems'
+[!unix] skip 'this procedure can only work on Unix systems'
 env HOME={{.Home}}
 env TMPDIR={{.TmpDir}}
 env db_version={{.DbVersion}}
