Add connection_super_user files to each sandbox

--- a/ts/templates/feature/dd-expose-tables.tmpl
+++ b/ts/templates/feature/dd-expose-tables.tmpl
@@ -43,12 +43,8 @@ stdout '# fail  :     0'
 
 run_sql_in_sandbox $sb_dir 'select VERSION()' {{.DbVersion}}-debug
 run_sql_in_sandbox $sb_dir 'select @@debug is not null' 1
-exec $sb_dir/use -BN -e 'select count(*) from mysql.tables where name =''tables'' and schema_id=1'
-stdout '\b1\b'
-! stderr .
-exec $sb_dir/use -BN -e 'select count(*) from information_schema.tables where table_name =''tables'' and table_schema=''mysql'''
-stdout '\b1\b'
-! stderr .
+run_sql_in_sandbox $sb_dir  'select count(*) from mysql.tables where name =''tables'' and schema_id=1' 1
+run_sql_in_sandbox $sb_dir 'select count(*) from information_schema.tables where table_name =''tables'' and table_schema=''mysql''' 1
 
 # sandbox cleanup
 exec dbdeployer delete msb_{{.DbPathVer}}_dd
