--- a/ts/templates/replication/replication.tmpl
+++ b/ts/templates/replication/replication.tmpl
@@ -72,9 +72,9 @@ stdout -count=3 'sandbox server started'
 exec $sb_dir/use_all 'select @@max_connections'
 stdout -count=3 66
 
-run_sql_in_sandbox $sb_dir/master 'select @@max_connections' 66
-run_sql_in_sandbox $sb_dir/node1 'select @@max_connections' 66
-run_sql_in_sandbox $sb_dir/node2 'select @@max_connections' 66
+run_sql_in_sandbox $sb_dir/master 'select @@max_connections' eq 66
+run_sql_in_sandbox $sb_dir/node1 'select @@max_connections' eq 66
+run_sql_in_sandbox $sb_dir/node2 'select @@max_connections' eq 66
 [version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/master
 [version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/node1
 [version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/node2
