--- a/ts/templates/replication/semisync.tmpl
+++ b/ts/templates/replication/semisync.tmpl
@@ -55,9 +55,9 @@ check_ports $sb_dir $required_ports
 
 # test replication
 
-[version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/master
-[version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/node1
-[version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/node2
+[!darwin] [version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/master
+[!darwin] [version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/node1
+[!darwin] [version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/node2
 exec $sb_dir/test_replication
 stdout '# failed:     0'
 ! stderr .
@@ -81,9 +81,9 @@ exec $sb_dir/m -e 'show global status like "Rpl_semi_sync_master_no_tx" '
 stdout 'Rpl_semi_sync_master_no_tx[^0-9]+0'
 ! stderr .
 
-[version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/master
-[version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/node1
-[version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/node2
+[!darwin] [version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/master
+[!darwin] [version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/node1
+[!darwin] [version_is_at_least:$db_version:5.6.0] ! find_errors $sb_dir/node2
 
 # sandbox cleanup
 exec dbdeployer delete rsandbox_{{.DbPathVer}}_semi
