--- a/ts/templates/feature/multiple.tmpl
+++ b/ts/templates/feature/multiple.tmpl
@@ -12,34 +12,7 @@ stdout 'multiple directory installed in .*/sandboxes/multi_msb_{{.DbPathVer}}'
 exists $sb_dir
 cleanup_at_end $sb_dir
 
-check_file $sb_dir metadata_all start_all sysbench_ready
-check_file $sb_dir clear_all n1 status_all
-check_file $sb_dir exec_all n2 replicate_from sbdescription.json stop_all test_sb_all
-check_file $sb_dir n3 restart_all send_kill_all sysbench use_all
-
-check_file $sb_dir/node1 start stop status clear
-check_file $sb_dir/node1 add_option connection.json init_db my.sandbox.cnf
-check_file $sb_dir/node1 sbdescription.json show_relaylog after_start connection.sql load_grants
-check_file $sb_dir/node1 replicate_from send_kill sysbench use
-check_file $sb_dir/node1 metadata restart show_binlog sysbench_ready wipe_and_restart
-check_file $sb_dir/node1 connection.conf grants.mysql my sb_include show_log test_sb
-check_file $sb_dir/node1/data msandbox.err
-
-check_file $sb_dir/node2 start stop status clear
-check_file $sb_dir/node2 add_option connection.json init_db my.sandbox.cnf
-check_file $sb_dir/node2 sbdescription.json show_relaylog after_start connection.sql load_grants
-check_file $sb_dir/node2 replicate_from send_kill sysbench use
-check_file $sb_dir/node2 metadata restart show_binlog sysbench_ready wipe_and_restart
-check_file $sb_dir/node2 connection.conf grants.mysql my sb_include show_log test_sb
-check_file $sb_dir/node2/data msandbox.err
-
-check_file $sb_dir/node3 start stop status clear
-check_file $sb_dir/node3 add_option connection.json init_db my.sandbox.cnf
-check_file $sb_dir/node3 sbdescription.json show_relaylog after_start connection.sql load_grants
-check_file $sb_dir/node3 replicate_from send_kill sysbench use
-check_file $sb_dir/node3 metadata restart show_binlog sysbench_ready wipe_and_restart
-check_file $sb_dir/node3 connection.conf grants.mysql my sb_include show_log test_sb
-check_file $sb_dir/node3/data msandbox.err
+check_sandbox_manifest $sb_dir multiple
 
 env required_ports=3
 [version_is_at_least:$db_version:8.0.0] env required_ports=6
