--- a/ts/templates/feature/single-custom-credentials.tmpl
+++ b/ts/templates/feature/single-custom-credentials.tmpl
@@ -23,13 +23,7 @@ cleanup_at_end $sb_dir
 
 # check files and ports
 
-check_file $sb_dir start stop status clear
-check_file $sb_dir add_option connection.json init_db my.sandbox.cnf
-check_file $sb_dir sbdescription.json show_relaylog after_start connection.sql load_grants
-check_file $sb_dir replicate_from send_kill sysbench use
-check_file $sb_dir metadata restart show_binlog sysbench_ready wipe_and_restart
-check_file $sb_dir connection.conf grants.mysql my sb_include show_log test_sb
-check_file $sb_dir/data msandbox.err
+check_sandbox_manifest $sb_dir single
 
 env required_ports=1
 [version_is_at_least:$db_version:8.0.0] env required_ports=2
