Add data-load test for single and replication

--- a/ts/templates/replication/replication-gtid.tmpl
+++ b/ts/templates/replication/replication-gtid.tmpl
@@ -68,6 +68,106 @@ stdout -count=1 '^[0-9]+$'
 exec $sb_dir/use_all_slaves 'select @@server_id'
 stdout -count=2 '^[0-9]+$'
 
+
+# load data list
+
+exec dbdeployer data-load list
+stdout 'employees\s+36 MB employee data'
+stdout 'menagerie\s+2.0 kB menagerie database'
+stdout 'world\s+93 kB world database'
+stdout 'worldx\s+99 kB world_X database'
+stdout 'sakila\s+732 kB Sakila database'
+
+# load data menagerie
+
+exec dbdeployer data-load get menagerie rsandbox_{{.DbPathVer}}_gtid
+stdout 'downloading https://.*/menagerie-db.tar.gz'
+stdout 'Unpacking .*/sandboxes/rsandbox_{{.DbPathVer}}_gtid/menagerie-db.tar.gz'
+stdout 'Running .*/sandboxes/rsandbox_{{.DbPathVer}}_gtid/load_db.sh'
+stdout 'menagerie.pet: Records: 8  Deleted: 0  Skipped: 0'
+stdout 'menagerie.event: Records: 10  Deleted: 0  Skipped: 0'
+
+# load data world
+
+exec dbdeployer data-load get world rsandbox_{{.DbPathVer}}_gtid
+stdout 'downloading https://.*/world-db.tar.gz'
+stdout 'Unpacking .*/sandboxes/rsandbox_{{.DbPathVer}}_gtid/world-db.tar.gz'
+stdout 'Running .*/sandboxes/rsandbox_{{.DbPathVer}}_gtid/load_db.sh'
+
+# load data worldx
+
+exec dbdeployer data-load get worldx rsandbox_{{.DbPathVer}}_gtid
+stdout 'downloading https://.*/world_x-db.tar.gz'
+stdout 'Unpacking .*/sandboxes/rsandbox_{{.DbPathVer}}_gtid/world_x-db.tar.gz'
+stdout 'Running .*/sandboxes/rsandbox_{{.DbPathVer}}_gtid/load_db.sh'
+
+# load data sakila
+
+exec dbdeployer data-load get sakila rsandbox_{{.DbPathVer}}_gtid
+stdout 'downloading https://.*/sakila-db.tar.gz'
+stdout 'Unpacking .*/sandboxes/rsandbox_{{.DbPathVer}}_gtid/sakila-db.tar.gz'
+stdout 'Running .*/sandboxes/rsandbox_{{.DbPathVer}}_gtid/load_db.sh'
+
+# load data check schemas
+
+exec $sb_dir/m -e 'show schemas'
+stdout 'menagerie'
+stdout 'world\b'
+stdout 'world_x'
+stdout 'sakila'
+
+exec $sb_dir/s1 -e 'show schemas'
+stdout 'menagerie'
+stdout 'world\b'
+stdout 'world_x'
+stdout 'sakila'
+
+# load data check tables
+
+exec $sb_dir/m -e 'show tables from menagerie'
+stdout 'event'
+stdout 'pet'
+
+exec $sb_dir/s1 -e 'show tables from menagerie'
+stdout 'event'
+stdout 'pet'
+
+exec $sb_dir/m -e 'show tables from world'
+stdout 'city'
+stdout 'country'
+stdout 'countrylanguage'
+
+exec $sb_dir/s1 -e 'show tables from world'
+stdout 'city'
+stdout 'country'
+stdout 'countrylanguage'
+
+exec $sb_dir/m -e 'show tables from world_x'
+stdout 'city'
+stdout 'country'
+stdout 'countryinfo'
+stdout 'countrylanguage'
+
+exec $sb_dir/s1 -e 'show tables from world_x'
+stdout 'city'
+stdout 'country'
+stdout 'countryinfo'
+stdout 'countrylanguage'
+
+exec $sb_dir/m -e 'show tables from sakila'
+stdout 'actor'
+stdout 'actor_info'
+stdout 'address'
+stdout 'category'
+stdout 'city'
+
+exec $sb_dir/s1 -e 'show tables from sakila'
+stdout 'actor'
+stdout 'actor_info'
+stdout 'address'
+stdout 'category'
+stdout 'city'
+
 # sandbox cleanup
 
 exec dbdeployer delete rsandbox_{{.DbPathVer}}_gtid
